[package]
name = "test_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "collector", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = {}
serde_json = {}
